# crpr_framework

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt
results/: Narrow_N2.csv  Narrow_N2_condition_summary.csv  Narrow_N2_experiment_summary.json  Narrow_N2_instance_summary.csv  Narrow_N2_legacy_summary.json  Narrow_N2_manifest.json  Narrow_N2_raw_runs.csv  Narrow_N2_runs.csv
scripts/: make_tables.py  run_benchmark.py
src/: __init__.py  collision.py  config.py  cr_pr.py  elite_manager.py  environment.py  experiment_stats.py  geometry.py  kinematic.py  metrics.py  objective.py  repair_operator.py  rrt_star.py
tests/: conftest.py  test_collision.py  test_crpr_integration.py  test_crpr_metadata.py  test_crpr_smoke.py  test_environment.py  test_experiment_stats.py  test_geometry.py  test_kinematic.py  test_make_tables_script.py  test_metrics.py  test_objective.py  test_repair_operator.py  test_rrt_star.py  test_run_benchmark_script.py
