[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cr-pr"
version = "0.1.0"
description = "Collision Repair via Path Relinking (CR-PR) for multi-agent path planning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "pytest>=7.4",
  "tabulate>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]